[package]
name = "take-once"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/AmitPr/take-once"
description = "A thread-safe container for one-time storage and one-time consumption of a value."
license = "MIT"


[dev-dependencies]
shuttle = { version = "0.8.1" }


[features]
_shuttle = []
